unusual-spending/k8s/jms-broker.yml
apiVersion: v1
kind: Service
metadata:
  name: jms-broker
  labels:
    app: jms-broker
spec:
  ports:
    - name: jms
      port: 61616
      targetPort: 61616
    - name: ui
      port: 8161
      targetPort: 8161
  selector:
    app: jms-broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jms-broker
  labels:
    app: jms-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jms-broker
  template:
    metadata:
      labels:
        app: jms-broker
    spec:
      containers:
        - image: quay.io/artemiscloud/activemq-artemis-broker:1.0.6
          imagePullPolicy: IfNotPresent
          name: jms-broker
          ports:
            - containerPort: 61616
              name: jms
            - containerPort: 8161
              name: ui
          volumeMounts:
            - name: data
              mountPath: /volume/data
            - name: etc-target
              mountPath: /volume/etc
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: artemis-data
        - name: etc-source
          configMap:
            name: artemis-etc
        - name: etc-target
          emptyDir: {}
