unusual-spending/k8s/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/payment/(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-storage-service
                port:
                  name: http
