unusual-spending/k8s/ingress-for-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /payment/(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  name: http
